<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">货查查</string>
<string name="tutorial_welcome">1、登录界面更加完善。\n2、修复提醒Bug。\n3、注册页面全部可用，注册完用户立即可登录。\n4、优化部分代码，运行效率提高。\n5、用户角色已经分配，不同角色登录后界面不同。\n</string>
  <string name="app_picker_name">应用</string>
  <string name="bookmark_picker_name">书签</string>
  <string name="button_add_calendar">添加事件至日历</string>
  <string name="button_add_contact">添加联系人</string>
  <string name="button_back">返回</string>
  <string name="button_book_search">打开图书搜索</string>
  <string name="button_cancel">取消</string>
  <string name="button_clipboard_empty">清空剪切板</string>
  <string name="button_custom_product_search">自定义搜索</string>
  <string name="button_dial">拨号</string>
  <string name="button_done">完成</string>
  <string name="button_email">发送email</string>
  <string name="button_get_directions">获取地址</string>
  <string name="button_google_shopper">谷歌购物</string>
  <string name="button_mms">发送彩信</string>
  <string name="button_ok">确定</string>
  <string name="button_open_browser">打开浏览器</string>
  <string name="button_product_search">打开产品搜索</string>
  <string name="button_read_book">浏览本书</string>
  <string name="button_search_book_contents">搜索图书内容</string>
  <string name="button_share_app">共享应用</string>
  <string name="button_share_bookmark">分享书签</string>
  <string name="button_share_by_email">通过email分享</string>
  <string name="button_share_by_sms">通过短信分享</string>
  <string name="button_share_clipboard">分享剪切板</string>
  <string name="button_share_contact">分享联系人</string>
  <string name="button_show_map">显示地图</string>
  <string name="button_sms">发送短信</string>
  <string name="button_web_search">网页搜索</string>
  <string name="button_wifi">连接到网络</string>
  <string name="contents_contact">联系人信息</string>
  <string name="contents_email">Email地址</string>
  <string name="contents_location">地理坐标</string>
  <string name="contents_phone">电话号码</string>
  <string name="contents_sms">短信地址</string>
  <string name="contents_text">纯文本</string>
  <string name="history_clear_text">删除历史</string>
  <string name="history_email_title">条码扫描器历史</string>
  <string name="history_send">发送历史</string>
  <string name="history_title">历史</string>
  <string name="menu_about">关于</string>
  <string name="menu_help">帮助</string>
  <string name="menu_history">历史</string>
  <string name="menu_settings">设置</string>
  <string name="menu_share">分享</string>
  <string name="msg_about">基于ZXing开源条码引擎</string>
  <string name="msg_buggy">此设备存在已知问题，将导致条码扫描器出错。更多信息，请访问 http://es.ericyue.info/faq.php</string>
  <string name="msg_bulk_mode_scanned">批量扫描：找到条码，已保存</string>
  <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
  <string name="msg_default_contents">内容</string>
  <string name="msg_default_format">格式</string>
  <string name="msg_default_meta">元数据</string>
  <string name="msg_default_mms_subject">Hi</string>
  <string name="msg_default_status">请将条码置于取景框内扫描。  </string>
  <string name="msg_default_time">时间</string>
  <string name="msg_default_type">类型</string>
  <string name="msg_encode_barcode_failed">无法生成条码。</string>
  <string name="msg_encode_contents_failed">无法根据已有数据生成条码。   </string>
  <string name="msg_google_shopper_missing">谷歌购物未安装</string>
  <string name="msg_install_google_shopper">谷歌购物是一款将条码扫描和商品比价相结合的应用，谷歌购物不使用浏览器，您想尝试吗？</string>
  <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
  <string name="msg_loading_apps">加载应用名单…</string>
  <string name="msg_not_our_results">您将离开此应用程序，得到的搜索结果与此应用程序无关</string>
  <string name="msg_redirect">重定向</string>
  <string name="msg_sbc_book_not_searchable">抱歉，无法找到此图书。</string>
  <string name="msg_sbc_failed">抱歉，搜索时遇到错误。</string>
  <string name="msg_sbc_no_page_returned">无页面返回</string>
  <string name="msg_sbc_page">页面</string>
  <string name="msg_sbc_searching_book">搜索图书…</string>
  <string name="msg_sbc_snippet_unavailable">摘录不可用</string>
  <string name="msg_sbc_unknown_page">未知页面</string>
  <string name="msg_share_explanation">您可以通过在自己的手机上显示条码，并使用其它手机扫描此条码的方式进行分享</string>
  <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
  <string name="msg_share_text">或键入一些文字</string>
  <string name="msg_unmount_usb">抱歉，SD卡不可访问。</string>
  <string name="preferences_actions_title">找到条码时</string>
  <string name="preferences_bulk_mode_summary">连续扫描并保存多个条形码</string>
  <string name="preferences_bulk_mode_title">批量扫描模式</string>
  <string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
  <string name="preferences_custom_product_search_summary" formatted="false">使用%s作为产品ID占位符</string>
  <string name="preferences_custom_product_search_title">自定义搜索网址</string>
  <string name="preferences_decode_1D_title">扫描 一维条码</string>
  <string name="preferences_decode_Data_Matrix_title">扫描 DM码</string>
  <string name="preferences_decode_QR_title">扫描 QR码</string>
  <string name="preferences_front_light_summary">前灯可用时，打开前灯</string>
  <string name="preferences_front_light_title">前灯</string>
  <string name="preferences_general_title">一般设置</string>
  <string name="preferences_name">设置</string>
  <string name="preferences_play_beep_title">提示音</string>
  <string name="preferences_remember_duplicates_summary">在历史记录中保存重复记录</string>
  <string name="preferences_remember_duplicates_title">记住重复</string>
  <string name="preferences_result_title">结果设置</string>
  <string name="preferences_reverse_image_summary">设备上启用了前置摄像头</string>
  <string name="preferences_reverse_image_title">反转摄像机的图像</string>
  <string name="preferences_scanning_title">条码类型选择</string>
  <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
  <string name="preferences_supplemental_title">检索更多信息</string>
  <string name="preferences_vibrate_title">振动</string>
  <string name="result_address_book">找到联系人信息</string>
  <string name="result_calendar">找到日历事件</string>
  <string name="result_email_address">找到email地址</string>
  <string name="result_geo">找到地理坐标</string>
  <string name="result_isbn">找到图书</string>
  <string name="result_product">找到产品</string>
  <string name="result_sms">找到短信地址</string>
  <string name="result_tel">找到电话号码</string>
  <string name="result_text">找到纯文本</string>
  <string name="result_uri">找到URL</string>
  <string name="result_wifi">发现网络配置</string>
  <string name="sbc_name">Google图书搜索</string>
  <string name="title_about">条码扫描器</string>
  <string name="zxing_url">http://es.ericyue.info</string>
  <string name="no_search_info">抱歉，没有找到相关信息！</string>
  <string name="huo_detail_smalltitle1">货源详细信息</string>
  <string name="huo_detail_startArea">出 &#160;发&#160; 地:</string>
  <string name="chauffer_detail_startArea">所 &#160;在&#160; 地:</string>
  <string name="huo_detail_endArea">到 &#160;达&#160; 地:</string>
  <string name="huo_detail_freightRates">运&#160;&#160;&#160;&#160;&#160;&#160;&#160;    价:</string>
  <string name="huo_detail_weight">重&#160;&#160;&#160;&#160;&#160;&#160;&#160;       量:</string>
  <string name="huo_detail_volume">体&#160;&#160;&#160;&#160;&#160;&#160;&#160;   积:</string>
  <string name="huo_detail_linkMan">联 &#160; 系  人:</string>
  <string name="huo_detail_huoName">货物名称:</string>
  <string name="huo_detail_huoType">货物类型:</string>
  <string name="huo_detail_transMode">运输类型:</string>
  <string name="huo_detail_notice">注意事项:</string>
  <string name="huo_detail_linkPhone">联系电话:</string>
  <string name="huo_detail_fixedPhone">固定电话:</string>
  <string name="huo_detail_shuoming">说明备注:</string>
  <string name="huo_detail_daoqiTime">信息有效期:</string>
  <string name="huo_detail_smalltitle2">货源详细信息</string>
  <string name="huo_detail_releaseTime">发布时间</string>
  <string name="fahuo_title">发布货源</string>
  <string name="manager_refresh">重 发</string>
  <string name="fabusiji_title">发布司机</string>
  <string name="che_detail_smalltitle1">车源详细信息</string>
  <string name="che_detail_startArea">出 &#160;发&#160; 地:</string>
  <string name="che_detail_endArea">到 &#160;达&#160; 地:</string>
  <string name="che_detail_passPoint">途 &#160;经&#160; 地:</string>
  <string name="che_detail_releaseTime">发布时间：</string>
  <string name="che_detail_startTime">发车时间：</string>
  <string name="che_detail_notice">注意事项：</string>
  <string name="che_detail_carType">车的类型:</string>
  <string name="che_detail_smalltitle2">车源详细信息</string>
  <string name="che_detail_cheLength">车长:</string>
  <string name="che_detail_location">车的驻扎地:</string>
  <string name="che_detail_weight">车重:</string>
  <string name="che_detail_carCondition">车的状况:</string>
  <string name="che_detail_carNumber">车牌号:</string>
  <string name="che_detail_linkPhone">联系电话:</string>
 
</resources>
