<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/bai" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/v1_title" />
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:baselineAligned="false">
            <ScrollView android:id="@id/sv_hd_detail" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TableLayout android:id="@id/huo_tablelayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:shrinkColumns="1">
                    <TextView android:textSize="16.0sp" android:textColor="@color/bg_small_title" android:gravity="center_vertical" android:background="@color/bg_detail_geduan" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginTop="10.0dip" android:text="@string/huo_detail_smalltitle1" />
                    <TableRow android:layout_marginTop="10.0dip">
                        <TextView android:textSize="16.0sp" 
                            android:textColor="@color/black" 
                            android:gravity="top|left" 
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent" 
                            android:text="@string/huo_detail_startArea" />
                        <TextView android:textSize="16.0sp" 
                            android:textColor="@color/black" 
                            android:gravity="center" 
                            android:id="@id/txt_from_area" 
                            android:layout_width="fill_parent" 
                            android:layout_height="fill_parent" />
                    </TableRow>
                    <TableRow android:layout_marginTop="10.0dip">
                        <TextView android:textSize="16.0sp" 
                            android:textColor="@color/black" 
                            android:gravity="top|left" 
                            android:layout_width="wrap_content" 
                            android:layout_height="fill_parent" 
                            android:text="@string/huo_detail_endArea" />
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/txt_to_area" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                    </TableRow>
                    <TableRow android:layout_marginTop="10.0dip">
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="top|left" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/huo_detail_freightRates" />
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/txt_huo_freight_rates" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                    </TableRow>
                    <TableRow android:layout_marginTop="10.0dip">
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="top|left" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/huo_detail_weight" />
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/txt_zhongliang" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                    </TableRow>
                    <TableRow android:layout_marginTop="10.0dip">
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="top|left" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/huo_detail_volume" />
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/txt_tiji" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                    </TableRow>
                    <TableRow android:layout_marginTop="10.0dip">
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="top|left" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/huo_detail_linkMan" />
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/txt_huo_contact" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                    </TableRow>
                    <TableRow android:layout_marginTop="10.0dip">
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="top|left" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/huo_detail_huoName" />
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/txt_huo_name" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                    </TableRow>
                    <TableRow android:layout_marginTop="10.0dip">
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="top|left" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/huo_detail_huoType" />
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/txt_huo_type" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                    </TableRow>
                    <TableRow android:layout_marginTop="10.0dip">
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="top|left" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/huo_detail_transMode" />
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/txt_trans_mode" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                    </TableRow>
                    <TableRow android:layout_marginTop="10.0dip">
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="top|left" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/huo_detail_notice" />
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/txt_notice" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                    </TableRow>
                    <TableRow android:layout_marginTop="10.0dip">
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="top|left" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/huo_detail_linkPhone" />
                        <TextView android:textSize="16.0sp" android:textColor="@color/blue2" android:gravity="center" android:id="@id/txt_huo_phone" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
                    </TableRow>
                    <TableRow android:layout_marginTop="10.0dip">
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="top|left" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/huo_detail_fixedPhone" />
                        <TextView android:textSize="16.0sp" android:textColor="@@color/blue2" android:gravity="center" android:id="@id/txt_huo_fixed_phone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                    </TableRow>
                    <TableRow android:layout_marginTop="10.0dip">
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="top|left" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/huo_detail_shuoming" />
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/txt_shuoming" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                    </TableRow>
                    <TableRow android:layout_marginTop="10.0dip">
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="top|left" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/huo_detail_daoqiTime" />
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/txt_daoqi_time" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                    </TableRow>
                    <TextView android:textSize="16.0sp" android:textColor="@color/bg_small_title" android:gravity="center_vertical" android:background="@color/bg_detail_geduan" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginTop="10.0dip" android:text="@string/huo_detail_smalltitle2" />
                   
                    <TableRow android:layout_marginTop="10.0dip" android:layout_marginBottom="20.0dip">
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="top|left" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/huo_detail_releaseTime" />
                        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/txt_datatime" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                    </TableRow>
                </TableLayout>
            </ScrollView>
           
        </LinearLayout>
        <include layout="@layout/v1_detail_topmenu" />
    </FrameLayout>
    <Button android:id="@id/btn_zhuye" android:background="@drawable/btn_zhuye" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="40.0dip" />
    <LinearLayout android:gravity="center_vertical" android:id="@id/li_switch" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="40.0dip" android:baselineAligned="false">
        <LinearLayout android:gravity="center" android:id="@id/btn_hd_detail" android:background="@drawable/peihuo_detail" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_weight="1.0">
            <ImageView android:id="@id/img_hd_detail" android:layout_width="89.0dip" android:layout_height="18.0dip" android:src="@drawable/v1_looklist1" android:scaleType="fitXY" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:id="@id/btn_hd_map" android:background="@drawable/peihuo_detail" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_weight="1.0">
            <ImageView android:id="@id/img_hd_map" android:layout_width="89.0dip" android:layout_height="18.0dip" android:src="@drawable/v1_lookmap1" android:scaleType="fitXY" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
