<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/bai" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
     <include layout="@layout/v1_title" />
     <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/manager_siji_nodata" android:background="@color/bai" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
	 <ImageView android:layout_width="80.0dip" android:layout_height="80.0dip" android:src="@drawable/v1_noinfo_bg" android:scaleType="fitXY" />
	 <TextView android:textSize="16.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/no_search_info" />
</LinearLayout>
<ListView android:id="@id/manager_siji_list" android:background="@color/bai" android:layout_width="fill_parent" android:layout_height="wrap_content" android:cacheColorHint="#00000000" android:layout_weight="1.0" />
<FrameLayout android:layout_width="fill_parent" 
    android:layout_height="wrap_content">
	 <Button android:textSize="18.0sp" android:textColor="@color/white" 
	     android:id="@id/btn_fabu_huoyuan" 
	     android:background="@drawable/btn_bottom_view" 
	     android:layout_width="fill_parent" 
	     android:layout_height="40.0dip" 
	     android:text="@string/fabusiji_title" />
	  <LinearLayout android:orientation="vertical"
	       android:id="@id/li_menu" 
	       android:background="@drawable/v1_manager_bottom_bg" 
	       android:padding="10.0dip" 
	       android:visibility="gone" 
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content">
            <Button android:textSize="18.0sp" 
                android:textStyle="bold" 
                android:textColor="@drawable/list_txt_color1" 
                android:id="@id/btn_manager_resend" 
                android:background="@drawable/btn_manager_resend" 
                android:layout_width="fill_parent" 
                android:layout_height="40.0dip" 
                android:layout_marginLeft="5.0dip" 
                android:layout_marginTop="8.0dip" 
                android:layout_marginRight="5.0dip" 
                android:text="@string/manager_refresh" />
        </LinearLayout>
	 
 </FrameLayout>

</LinearLayout>